# fat_calculate_bot

./: .dockerignore  .envrc  .gitignore  Dockerfile  README.md  basedpyrightconfig.json  pyproject.toml
src/fat_calculate_bot/: main.py
