[project]
name = "fat-calculate-bot"
version = "0.1.0"
description = "бот для подсчета калорий"
authors = [
    {name = "т"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot (>=22.5,<23.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"

[tool.mypy]
python_version = "3.13"

[[tool.mypy.overrides]]
module = ["telegram", "telegram.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["dotenv"]
ignore_missing_imports = true